--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           <p class="badge-label">Languages</p>
           <div class="pills-container">
             <p class="pill">JS</p>
-            <p class="pill">Golang</p>
-            <p class="pill">Python</p>
-            <p class="pill">Java</p>
-            <p class="pill">Dart</p>
-            <p class="pill">C++</p>
+            <p class="pill">TypeScript</p>
+            <p class="pill">React</p>
+            <p class="pill">Html</p>
+            <p class="pill">Css</p>
+            <p class="pill">Scss</p>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="content2">
         <div class="content">
           <p class="badge-label">Previous Work</p>
-          <p class="info">Previously I've worked with FQ8, Xerus, 2FGC</p>
+          <p class="info">Previously I've worked with Free lancer</p>
         </div>
         <div class="content">
           <p class="badge-label">Hobbies</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="content">
           <p class="badge-label">Location</p>
-          <p class="info">Downtown San Francisco</p>
+          <p class="info"> Egypt__Elgharbia__Kafer ElZayat</p>
         </div>
       </div>
     </main>
